# mariadb-columnstore-engine

./: CMakeLists.txt  cpackEngineRPM.cmake
cmake/: clang-tidy.cmake  gcc.cmake
dbcon/execplan/: calpontsystemcatalog.h  treenode.h
dbcon/joblist/: tupleaggregatestep.cpp  tupleunion.cpp
dbcon/mysql/: ha_calpont_ddl.cpp  ha_mcs.cpp  ha_mcs.h  ha_mcs_ddl.cpp  ha_mcs_execplan.cpp  ha_mcs_impl.cpp  ha_mcs_impl.h  ha_mcs_impl_if.h
primitives/linux-port/: CMakeLists.txt  column.cpp  pp_processor_ops_tests  tdriver.cpp
primitives/primproc/: batchprimitiveprocessor.cpp
utils/dataconvert/: dataconvert.h
utils/loggingcpp/: MessageFile.txt  logger.cpp
utils/rowgroup/: rowgroup.cpp
versioning/BRM/: extentmap.cpp  sessionmanagerserver.cpp  tablelockserver.cpp
writeengine/bulk/: we_colbufmgr.cpp
writeengine/dictionary/: we_dctnry.cpp
writeengine/server/: we_dmlcommandproc.cpp
writeengine/shared/: shared_components_tests.cpp  we_brm.cpp  we_convertor.cpp  we_shared_components_tests  we_type.h  we_typeext.h
writeengine/splitter/: we_sdhandler.cpp
writeengine/wrapper/: we_colop.cpp  writeengine.cpp
